# SmartThingWeb

./: .env  .env-example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  copy_to_pi.sh  docker-compose.yaml  docker-compose.yml  docker_images_update.sh  index.html  install.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: node.js.yml
.guthub/workflows/: node.js.yml
deploy/: for_nginx.sh  gateway.sh
docs/: ux_ui.odt
hooks/: pre-commit
pi/: for_nginx.sh  pi_zero.sh
server/: CMakeLists.txt  RestService.h  main.cpp
server/handlers/: PageRequestHandler.h  ResourceRequestHandler.h  STRequestHandler.h  WebSocketRequestHandler.h
server/pages/: index.html
server/resources/: index.html  script.js  styles.css
server/services/: SmartThingService.h  WsService.h
src/: App.vue  EventBus.js  api.js  buildInfo.js  intlConfig.js  main.js  messages.js  routes.js
src/api/: ApiEventBusUtils.js  ApiFetchUtils.js  ApiNotifyUtils.js  ApiUtils.js  AuthorizationApi.js  CloudApi.js  DashboardApi.js  DeviceApi.js  GatewayApi.js  SearchDevicesApi.js
src/api/device/: DeviceApi.js  DeviceFetch.js
src/assets/: animation.css  base.css  main.css
src/components/: ControlPanel.vue  DeviceControlPanel.vue  DeviceInfoBlock.vue  DeviceLogs.vue  DevicesTable.vue  GatewayControlPanel.vue  Home.vue  SearchDeviceInfo.vue
src/store/: authStore.js  cloudAuthStore.js  controlPanelStore.js  dashboardStore.js  gatewayAuthStore.js  gatewayStore.js  stompClientStore.js  themeStore.js
src/themes/: themes.js
src/utils/: EventBus.js  StringUtils.js
(+162 files in other folders)
